k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: depot-service
  namespace: depot
  labels:
    app: depot
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: depot
